Fixing compilation